Bug 530571 - Performance - Method invokes inefficient Number constructor; use static valueOf instead
Replaced invocation of number constructors with valueOf.

Change-Id: Iaee1a46100f0a5b831f48d2d7d495fab7e4fb5dd
Signed-off-by: Jonas Hungershausen <jh@vogella.com>